# cthulhu_interpreter_se

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conan.ps1  conanfile.txt
benchmark/: build_release.ps1  build_release.sh
benchmark/sources/: fib_sequence.txt
docs/cthulhu_se/: domains.md  executable.md  language.md
docs/cthulhu_se/domains/: bv32.md  dict.md  instr.md  stck.md  word.md
samples/: simple_add.cth
src/: main.cpp
src/builtin_structs/include/builtin_structs/: BitVector.hpp  Dict.hpp  FastInstruction.hpp  Instruction.hpp  Stack.hpp  builtin_structs.hpp
src/builtin_structs/source/: Dict.cpp
src/builtins/include/: ibuiltin.h
src/builtins/include/builtins/: ibuiltin.h
src/builtins/source/: bv32.cpp  bv32.h  macros.h  stck.cpp  stck.h
src/common/include/common/: InterpreterException.hpp  compile_utils.hpp  execution_utils.hpp  (+2 more)
src/compiler/source/: to_fast_code.cpp
src/domains/source/: Dictionary.cpp  DomainManager.cpp  Sequence.cpp  details.hpp  dict.cpp  instr.cpp  stck.cpp  word.cpp
src/interpreter/include/: iinterpreter.h  iprogram_state.h
src/interpreter/source/: Interpreter.cpp  interpreter.cpp  interpreter.h  interpreter_dummy.cpp  interpreter_dummy.h
src/parser/include/: idict.h  iprogram_code.h  istack.h
src/parser/source/: parser.cpp  parser.h  parser_dummy.cpp  parser_dummy.h
src/program/source/: dict.cpp  dict.h  idict.cpp  program.cpp  program.h  stack.cpp  stack_vector.cpp  stack_vector.h
src/utils/include/: imap.h  iset.h  trie_map.h  trie_set.h
src/utils/source/: details.h  std_iterator_wrapper.h  std_map.h  std_set.h
src_old/: main.cpp
src_old/builtins/source/: bv32.h  macros.h  stck.cpp
src_old/interpreter/source/: interpreter.cpp  interpreter.h  interpreter_dummy.h
src_old/parser/source/: parser_dummy.h
src_old/program/source/: dict.cpp  stack_vector.cpp
src_old/utils/source/: std_iterator_wrapper.h  std_set.h
test_sources/: fib_sequence.txt  fib_sequence.txt.old  simple_add.txt
tests/: Dict.cpp  Dict.hpp  main.cpp
(+56 files in other folders)
